fix(api): throw on non-2xx responses in ApiClient.get so tests pass