@@ -1,52 +1,54 @@
 package com.keyin.airtravelcli.api;
 
+import java.io.BufferedReader;
 import java.io.IOException;
-import java.net.URI;
-import java.net.http.HttpClient;
-import java.net.http.HttpRequest;
-import java.net.http.HttpResponse;
-
+import java.io.InputStream;
+import java.io.InputStreamReader;
+import java.net.HttpURLConnection;
+import java.net.URL;
+import java.nio.charset.StandardCharsets;
 
 public class ApiClient {
     private final String baseUrl;
-    private final HttpClient http;
-
-    public ApiClient() {
-        this("http://localhost:8080");
-    }
 
     public ApiClient(String baseUrl) {
-        String b = baseUrl == null ? "" : baseUrl.trim();
-        if (b.endsWith("/")) {
-            b = b.substring(0, b.length() - 1);
-        }
-        this.baseUrl = b;
-        this.http = HttpClient.newHttpClient();
+        this.baseUrl = baseUrl.endsWith("/") ? baseUrl.substring(0, baseUrl.length() - 1) : baseUrl;
     }
 
-
-    public String buildUrl(String path) {
-        if (path == null || path.isBlank()) return baseUrl;
-        String p = path.startsWith("/") ? path : "/" + path;
-        return baseUrl + p;
-    }
-
-
-    public String get(String endpoint) {
+    public String get(String path) {
+        HttpURLConnection conn = null;
         try {
-            HttpRequest request = HttpRequest.newBuilder()
-                    .uri(URI.create(buildUrl(endpoint)))
-                    .GET()
-                    .build();
+            URL url = new URL(baseUrl + path);
+            conn = (HttpURLConnection) url.openConnection();
+            conn.setRequestMethod("GET");
+            conn.setRequestProperty("Accept", "application/json");
+            conn.setConnectTimeout(5000);
+            conn.setReadTimeout(5000);
 
-            HttpResponse<String> response = http.send(request, HttpResponse.BodyHandlers.ofString());
-            return response.body();
-        } catch (IOException | InterruptedException e) {
-            throw new RuntimeException("Request failed: " + e.getMessage(), e);
+            int status = conn.getResponseCode();
+
+            if (status >= 200 && status < 300) {
+                return readAll(conn.getInputStream());
+            } else {
+                String body = readAll(conn.getErrorStream());
+                throw new RuntimeException("HTTP " + status + " from " + path +
+                        (body.isEmpty() ? "" : " – " + body));
+            }
+        } catch (IOException e) {
+            throw new RuntimeException("GET failed for " + path, e);
+        } finally {
+            if (conn != null) conn.disconnect();
         }
     }
 
-    public String getBaseUrl() {
-        return baseUrl;
+    private static String readAll(InputStream in) throws IOException {
+        if (in == null) return "";
+        try (BufferedReader br =
+                     new BufferedReader(new InputStreamReader(in, StandardCharsets.UTF_8))) {
+            StringBuilder sb = new StringBuilder();
+            String line;
+            while ((line = br.readLine()) != null) sb.append(line);
+            return sb.toString();
+        }
     }
 }
